fix visibility selector for JS

--- a/src/styles/utilities/visibility.css
+++ b/src/styles/utilities/visibility.css
@@ -1,6 +1,6 @@
 /* hide an element visually, but keep it legible to screen readers, etc. */
 .hide-visually,
-[data-supports='js'] .hide-visually\@js {
+[data-supports~='js'] .hide-visually\@js {
 	border: 0;
 	clip: rect(1px, 1px, 1px, 1px);
 	clip-path: inset(100%);
@@ -12,7 +12,7 @@
 }
 
 .show-visually,
-[data-supports='js'] .show-visually\@js {
+[data-supports~='js'] .show-visually\@js {
 	clip: auto;
 	clip-path: none;
 	height: auto;
